--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   date_picker_timeline: ^1.2.3
   dio: ^5.1.1
   dio_cookie_manager: ^3.0.0
-  dots_indicator: ^2.1.0
+  dots_indicator: ^3.0.0
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
   flutter:
@@ -46,7 +46,8 @@ dependencies:
   fluttertoast: ^8.2.1
   get: ^4.6.5
   google_sign_in: ^6.1.0
-  package_info_plus: ^3.1.0
+  http: ^0.13.6
+  package_info_plus: ^4.0.0
   shared_preferences: ^2.1.0
   syncfusion_flutter_charts: ^21.2.3
 
