--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,13 +41,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_easyloading: ^3.0.5
+  flutter_launcher_icons: ^0.13.1
   flutter_ruler_picker: ^1.0.3
   flutter_screenutil: ^5.7.0
   fluttertoast: ^8.2.1
   get: ^4.6.5
   google_sign_in: ^6.1.0
   http: ^0.13.6
+  openfoodfacts: ^2.5.1
   package_info_plus: ^4.0.0
+  percent_indicator: ^4.2.3
   shared_preferences: ^2.1.0
   syncfusion_flutter_charts: ^21.2.3
 
@@ -55,7 +58,11 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/logo_my_diet.png"
+  min_sdk_android: 21
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
