--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_ruler_picker: ^1.0.3
   flutter_screenutil: ^5.7.0
+  flutter_staggered_grid_view: ^0.6.2
   fluttertoast: ^8.2.1
   get: ^4.6.5
   google_sign_in: ^6.1.0
@@ -52,6 +53,7 @@ dependencies:
   package_info_plus: ^4.0.0
   percent_indicator: ^4.2.3
   shared_preferences: ^2.1.0
+  
   syncfusion_flutter_charts: ^21.2.3
 
 dev_dependencies:
