--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bottom_picker: ^2.0.4
   cached_network_image: ^3.2.3
   cloud_firestore: ^4.4.4
   cookie_jar: ^4.0.1
@@ -49,10 +50,13 @@ dependencies:
   get: ^4.6.5
   google_sign_in: ^6.1.0
   http: ^0.13.6
+  intl: ^0.18.1
+  numberpicker: ^2.1.2
   openfoodfacts: ^2.5.1
   package_info_plus: ^4.0.0
   percent_indicator: ^4.2.3
   shared_preferences: ^2.1.0
+  simple_barcode_scanner: ^0.0.8
   syncfusion_flutter_charts: ^21.2.3
 
 dev_dependencies:
@@ -106,8 +110,8 @@ flutter:
   #
   fonts:
     - family: Pacifico
-      fonts: 
-      - asset: assets/fonts/Pacifico-Regular.ttf
+      fonts:
+        - asset: assets/fonts/Pacifico-Regular.ttf
     - family: OpenSans
       fonts:
         - asset: assets/fonts/OpenSans-Italic-VariableFont_wdth,wght.ttf
