--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   bottom_picker: ^2.0.4
   cached_network_image: ^3.2.3
-  cloud_firestore: ^4.4.4
+  camera: ^0.10.5+5
+  cloud_firestore: ^4.13.0
   cookie_jar: ^4.0.1
   cupertino_icons: ^1.0.2
   date_picker_timeline: ^1.2.3
@@ -39,8 +40,10 @@ dependencies:
   dots_indicator: ^3.0.0
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
+  firebase_ml_model_downloader: ^0.2.4+4
   flutter:
     sdk: flutter
+  kommunicate_flutter: ^1.1.6
   flutter_easyloading: ^3.0.5
   flutter_launcher_icons: ^0.13.1
   flutter_ruler_picker: ^1.0.3
@@ -50,7 +53,10 @@ dependencies:
   get: ^4.6.5
   google_sign_in: ^6.1.0
   http: ^0.13.6
+  image: ^4.1.3
+  image_picker: ^1.0.4
   intl: ^0.18.1
+  
   numberpicker: ^2.1.2
   openfoodfacts: ^2.5.1
   package_info_plus: ^4.0.0
@@ -58,6 +64,7 @@ dependencies:
   shared_preferences: ^2.1.0
   simple_barcode_scanner: ^0.0.8
   syncfusion_flutter_charts: ^21.2.3
+  tflite_flutter: ^0.10.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -83,6 +90,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
+    - assets/models/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
